# OpenVAS-Report-Generator-in-Python

./: .gitignore  README.md  pyproject.toml
src/openvas_report_generator/: __init__.py  cli.py  client.py  config.py
tests/: test_client.py  test_config.py
