[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openvas-report-generator"
version = "1.0.0"
description = "Production-ready OpenVAS report generator CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
authors = [
  { name = "OpenVAS Report Generator Contributors" }
]

[project.scripts]
openvas-report = "openvas_report_generator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
